# ProjectNote

./: .env  .env.example  .gitignore  Makefile  README.md  README_MONOREPO.md  manage.py  package-lock.json  package.json  pyproject.toml  server
app/: main.py
app/api/: routes.py  schemas.py
app/core/: config.py
app/db/: base.py  models.py
apps/backend/: README.md  main.py  manage.py
apps/web/: README.md  eslint.config.js  index.html  main.py  package-lock.json  package.json  vite.config.js
client/: __init__.py  base.html
client/admin/: admin.html  dashboard.html  tables.html  users.html
client/auth/: admin_login.html
client/interfaces/: __init__.py  web.py
client/research_notes/: cover.html  detail.html  printable.html  viewer.html
client/workflow/: collaboration_integrations.html  home.html  my_page.html  project_create.html  project_detail.html  project_research_notes.html  project_research_notes_print.html  project_researchers.html  researchers.html  signatures.html
docs/architecture/: server-client-restructure.md
projectnote/: settings.py  urls.py  views.py  wsgi.py
projectnote/server/: __init__.py
projectnote/workflow_app/: models.py  repositories.py  services.py
projectnote_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/: services.py  settings.py  urls.py  views.py
server/application/: api.py  mock_data.py  models.py  repositories.py  schemas.py  services.py  views.py  web_support.py
server/config/: apps.py  asgi.py  settings.py  urls.py
server/core/: __init__.py  dependencies.py  web.py
server/infrastructure/: repositories.py
server/interfaces/: __init__.py
server/migrations/: 0002_team_adminaccount.py  0005_drop_adminaccount_rename_team_table.py  0008_remove_projectmember_researcher.py  0009_alter_projectmember_unique_together.py  0010_delete_researcher.py  0012_alter_useraccount_role.py  (+5 more)
templates/: base.html  base_admin.html
tests/: test_api.py
tooling/: README.md
(+238 files in other folders)
