[project]
name = "projectnote-backend"
version = "0.1.0"
description = "Research note integrated platform backend"
requires-python = ">=3.10"
dependencies = [
  "django>=5.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-django>=4.9.0",
  "ruff>=0.6.2"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "projectnote.settings"

[tool.ruff]
line-length = 100


[tool.setuptools.packages.find]
include = ["projectnote*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
