[project]
name = "projectnote-backend"
version = "0.1.0"
description = "Research note integrated platform backend"
requires-python = ">=3.10"
dependencies = [
  "django>=5.1.0",
  "sqlalchemy>=2.0.36",
  "pydantic>=2.9.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-django>=4.9.0",
  "ruff>=0.6.2"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["server/tests"]
DJANGO_SETTINGS_MODULE = "server.config.settings"

[tool.ruff]
line-length = 100


[tool.setuptools.packages.find]
include = ["server*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
